--- a/templates/update-redesign/vmp-update-ingredients.html
+++ b/templates/update-redesign/vmp-update-ingredients.html
@@ -4,12 +4,18 @@
     <div id="content-pane" class="nhsuk-grid-column-full">
 
 
+        <div class="nhsuk-grid-column-three-quarters">
+            <span class="nhsuk-caption-l" id="update-ingredients-sub-heading">Update ingredients</span>
+            <span class="nhsuk-u-visually-hidden"> - </span>
+            <h1 class="nhsuk-heading-xl" id="update-ingredients-heading">Abacavir 20mg/ml oral solution sugar free</h1>
+        </div>
 
-        <span class="nhsuk-caption-l" id="update-ingredients-sub-heading">Update ingredients</span>
-        <span class="nhsuk-u-visually-hidden"> - </span>
-        <h1 class="nhsuk-heading-xl" id="update-ingredients-heading">Abacavir 20mg/ml oral solution sugar free</h1>
-
-
+        <div class="nhsuk-grid-column-one-quarter" style="float: right;">
+            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+        </div>
 
         <form method="post" id="form">
             <input name="_csrf"
@@ -21,10 +27,16 @@
 
             <div class="nhsuk-grid-column-full update-box">
                 <section id="ingredient-0" class="update-section">
+                     <div class="update-general-heading">
+                                <h2 class="nhsuk-heading-l nhsuk-u-margin-bottom-1">Abacavir sulfate</h2>
+                                <a href="#" class="nhsuk-link nhsuk-link--reverse nhsuk-button-float-right">Revert
+                                    changes</a>
+
+
+                            </div>
                     <fieldset class="nhsuk-fieldset">
                         <div class="ingredient-heading">
-                            <legend class="nhsuk-fieldset__legend--l update-general-heading"
-                                id="ingredient-0-legend-value">Abacavir sulfate</legend>
+                           
                         </div>
 
 
@@ -125,43 +137,7 @@
                                     <div class="nhsuk-form-group">
                                         <label class="nhsuk-label" for="ingredient-0-numerator-uom">Value</label>
 
-                                        <div>
-
-                                        </div>
-                                        <div>
-                                            <div class="accessibleautocomplete__wrapper">
-                                                <div
-                                                    style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">
-                                                    <div id="ingredient-0-numerator-uom__status--A" role="status"
-                                                        aria-atomic="true" aria-live="polite"></div>
-                                                    <div id="ingredient-0-numerator-uom__status--B" role="status"
-                                                        aria-atomic="true" aria-live="polite"></div>
-                                                </div><input aria-expanded="false"
-                                                    aria-owns="ingredient-0-numerator-uom__listbox"
-                                                    aria-autocomplete="both"
-                                                    aria-describedby="ingredient-0-numerator-uom__assistiveHint"
-                                                    autocomplete="off"
-                                                    class="accessibleautocomplete__input accessibleautocomplete__input--show-all-values"
-                                                    id="ingredient-0-numerator-uom" name="" placeholder="" type="text"
-                                                    role="combobox"><svg version="1.1"
-                                                    xmlns="http://www.w3.org/2000/svg"
-                                                    class="accessibleautocomplete__dropdown-arrow-down"
-                                                    focusable="false">
-                                                    <g stroke="none" fill="none" fill-rule="evenodd">
-                                                        <polygon fill="#000000" points="0 0 22 0 11 17"></polygon>
-                                                    </g>
-                                                </svg>
-                                                <ul class="accessibleautocomplete__menu accessibleautocomplete__menu--inline accessibleautocomplete__menu--hidden"
-                                                    id="ingredient-0-numerator-uom__listbox" role="listbox">
-                                                    <li aria-selected="false" class="accessibleautocomplete__option"
-                                                        id="ingredient-0-numerator-uom__option--0" role="option"
-                                                        tabindex="-1" aria-posinset="1" aria-setsize="1">mg</li>
-                                                </ul><span id="ingredient-0-numerator-uom__assistiveHint"
-                                                    style="display: none;">When autocomplete results are available use
-                                                    up and down arrows to review and enter to select. Touch device
-                                                    users, explore by touch or with swipe gestures.</span>
-                                            </div>
-                                        </div><select class="nhsuk-select display-no-select"
+                                        <select class="nhsuk-select display-no-select"
                                             id="ingredient-0-numerator-uom-select" autofocus="autofocus"
                                             name="values[0].strengthNumeratorUOM">
                                             <option value="">Select an option</option>
@@ -776,43 +752,8 @@
                                     <div class="nhsuk-form-group">
                                         <label class="nhsuk-label" for="ingredient-0-denominator-uom">Value</label>
 
-                                        <div>
 
-                                        </div>
-                                        <div>
-                                            <div class="accessibleautocomplete__wrapper">
-                                                <div
-                                                    style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">
-                                                    <div id="ingredient-0-denominator-uom__status--A" role="status"
-                                                        aria-atomic="true" aria-live="polite"></div>
-                                                    <div id="ingredient-0-denominator-uom__status--B" role="status"
-                                                        aria-atomic="true" aria-live="polite"></div>
-                                                </div><input aria-expanded="false"
-                                                    aria-owns="ingredient-0-denominator-uom__listbox"
-                                                    aria-autocomplete="both"
-                                                    aria-describedby="ingredient-0-denominator-uom__assistiveHint"
-                                                    autocomplete="off"
-                                                    class="accessibleautocomplete__input accessibleautocomplete__input--show-all-values"
-                                                    id="ingredient-0-denominator-uom" name="" placeholder="" type="text"
-                                                    role="combobox"><svg version="1.1"
-                                                    xmlns="http://www.w3.org/2000/svg"
-                                                    class="accessibleautocomplete__dropdown-arrow-down"
-                                                    focusable="false">
-                                                    <g stroke="none" fill="none" fill-rule="evenodd">
-                                                        <polygon fill="#000000" points="0 0 22 0 11 17"></polygon>
-                                                    </g>
-                                                </svg>
-                                                <ul class="accessibleautocomplete__menu accessibleautocomplete__menu--inline accessibleautocomplete__menu--hidden"
-                                                    id="ingredient-0-denominator-uom__listbox" role="listbox">
-                                                    <li aria-selected="false" class="accessibleautocomplete__option"
-                                                        id="ingredient-0-denominator-uom__option--0" role="option"
-                                                        tabindex="-1" aria-posinset="1" aria-setsize="1">ml</li>
-                                                </ul><span id="ingredient-0-denominator-uom__assistiveHint"
-                                                    style="display: none;">When autocomplete results are available use
-                                                    up and down arrows to review and enter to select. Touch device
-                                                    users, explore by touch or with swipe gestures.</span>
-                                            </div>
-                                        </div><select class="nhsuk-select display-no-select"
+                                        <select class="nhsuk-select display-no-select"
                                             id="ingredient-0-denominator-uom-select" autofocus="autofocus"
                                             name="values[0].strengthDenominatorUOM">
                                             <option value="">Select an option</option>
@@ -1539,9 +1480,9 @@
                                 </div>
 
                                 <button class="nhsuk-button nhsuk-button--reverse" type="button"
-                                onclick="setLastDayOfPreviousMonth(this)">
-                                End Attribute
-                            </button>
+                                    onclick="setLastDayOfPreviousMonth(this)">
+                                    End Attribute
+                                </button>
                             </div>
                         </div>
 
@@ -1578,7 +1519,7 @@
             </section>
 
             <button formaction="/update/vmp?execution=e1s1" class="nhsuk-button nhsuk-button--primary" id="submit"
-                name="_eventId_submit" type="submit">Continue
+                name="_eventId_submit" type="submit">Preview changes
             </button>
 
         </form>
