--- a/templates/update-redesign/vmp-update-unit-dose-detail.html
+++ b/templates/update-redesign/vmp-update-unit-dose-detail.html
@@ -4,9 +4,20 @@
     <div id="content-pane" class="nhsuk-grid-column-full">
 
 
-        <span class="nhsuk-caption-l" id="update-unit-dose-sub-heading">Update unit dose details</span>
-        <span class="nhsuk-u-visually-hidden"> - </span>
-        <h1 class="nhsuk-heading-xl" id="update-unit-dose-heading">Abacavir 20mg/ml oral solution sugar free</h1>
+        <div class="nhsuk-grid-column-three-quarters"> <span class="nhsuk-caption-l"
+                id="update-unit-dose-sub-heading">Update unit dose details</span>
+            <span class="nhsuk-u-visually-hidden"> - </span>
+            <h1 class="nhsuk-heading-xl" id="update-unit-dose-heading">Abacavir 20mg/ml oral solution sugar free</h1>
+        </div>
+
+        <div class="nhsuk-grid-column-one-quarter" style="float: right;">
+            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+        </div>
+
+
 
 
         <form method="post" id="form" class="">
@@ -21,11 +32,15 @@
                 <div class="nhsuk-grid-column-full">
                     <section id="unit-dose-0" class="update-section nhsuk-u-padding-bottom-4">
                         <div class="nhsuk-grid-column-full update-box">
+                             <div class="update-general-heading">
+                                <h2 class="nhsuk-heading-l nhsuk-u-margin-bottom-1">Unit dose details</h2>
+                                <a href="#" class="nhsuk-link nhsuk-link--reverse nhsuk-button-float-right">Revert
+                                    changes</a>
+
+
+                            </div>
                             <fieldset class="nhsuk-fieldset nhsuk-u-padding-bottom-2">
-                                <legend id="unit-dose-0-unit-dose-legend"
-                                    class="nhsuk-fieldset__legend--l update-general-heading">
-                                    Unit dose details
-                                </legend>
+                             
 
                                 <!--DD Indicator-->
                                 <div class="nhsuk-grid-column-full">
@@ -81,45 +96,7 @@
                                                 <label class="nhsuk-label"
                                                     for="unit-dose-0-input-unit-dose-uom">Value</label>
 
-                                                <div>
-
-                                                </div>
-                                                <div>
-                                                    <div class="accessibleautocomplete__wrapper">
-                                                        <div
-                                                            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">
-                                                            <div id="unit-dose-0-input-unit-dose-uom__status--A"
-                                                                role="status" aria-atomic="true" aria-live="polite">
-                                                            </div>
-                                                            <div id="unit-dose-0-input-unit-dose-uom__status--B"
-                                                                role="status" aria-atomic="true" aria-live="polite">
-                                                            </div>
-                                                        </div><input aria-expanded="false"
-                                                            aria-owns="unit-dose-0-input-unit-dose-uom__listbox"
-                                                            aria-autocomplete="both"
-                                                            aria-describedby="unit-dose-0-input-unit-dose-uom__assistiveHint"
-                                                            autocomplete="off"
-                                                            class="accessibleautocomplete__input accessibleautocomplete__input--show-all-values"
-                                                            id="unit-dose-0-input-unit-dose-uom" name="" placeholder=""
-                                                            type="text" role="combobox"><svg version="1.1"
-                                                            xmlns="http://www.w3.org/2000/svg"
-                                                            class="accessibleautocomplete__dropdown-arrow-down"
-                                                            focusable="false">
-                                                            <g stroke="none" fill="none" fill-rule="evenodd">
-                                                                <polygon fill="#000000" points="0 0 22 0 11 17">
-                                                                </polygon>
-                                                            </g>
-                                                        </svg>
-                                                        <ul class="accessibleautocomplete__menu accessibleautocomplete__menu--inline accessibleautocomplete__menu--hidden"
-                                                            id="unit-dose-0-input-unit-dose-uom__listbox"
-                                                            role="listbox"></ul><span
-                                                            id="unit-dose-0-input-unit-dose-uom__assistiveHint"
-                                                            style="display: none;">When autocomplete results are
-                                                            available use up and down arrows to review and enter to
-                                                            select. Touch device users, explore by touch or with swipe
-                                                            gestures.</span>
-                                                    </div>
-                                                </div><select class="nhsuk-select display-no-select"
+                                                <select class="nhsuk-select display-no-select"
                                                     id="unit-dose-0-input-unit-dose-uom-select" autofocus="autofocus"
                                                     name="values[0].udfsUomCode">
                                                     <option value="">Select an option</option>
@@ -721,45 +698,7 @@
                                                 <label class="nhsuk-label"
                                                     for="unit-dose-0-input-unit-dose-vmp-uom">Value</label>
 
-                                                <div>
-
-                                                </div>
-                                                <div>
-                                                    <div class="accessibleautocomplete__wrapper">
-                                                        <div
-                                                            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">
-                                                            <div id="unit-dose-0-input-unit-dose-vmp-uom__status--A"
-                                                                role="status" aria-atomic="true" aria-live="polite">
-                                                            </div>
-                                                            <div id="unit-dose-0-input-unit-dose-vmp-uom__status--B"
-                                                                role="status" aria-atomic="true" aria-live="polite">
-                                                            </div>
-                                                        </div><input aria-expanded="false"
-                                                            aria-owns="unit-dose-0-input-unit-dose-vmp-uom__listbox"
-                                                            aria-autocomplete="both"
-                                                            aria-describedby="unit-dose-0-input-unit-dose-vmp-uom__assistiveHint"
-                                                            autocomplete="off"
-                                                            class="accessibleautocomplete__input accessibleautocomplete__input--show-all-values"
-                                                            id="unit-dose-0-input-unit-dose-vmp-uom" name=""
-                                                            placeholder="" type="text" role="combobox"><svg
-                                                            version="1.1" xmlns="http://www.w3.org/2000/svg"
-                                                            class="accessibleautocomplete__dropdown-arrow-down"
-                                                            focusable="false">
-                                                            <g stroke="none" fill="none" fill-rule="evenodd">
-                                                                <polygon fill="#000000" points="0 0 22 0 11 17">
-                                                                </polygon>
-                                                            </g>
-                                                        </svg>
-                                                        <ul class="accessibleautocomplete__menu accessibleautocomplete__menu--inline accessibleautocomplete__menu--hidden"
-                                                            id="unit-dose-0-input-unit-dose-vmp-uom__listbox"
-                                                            role="listbox"></ul><span
-                                                            id="unit-dose-0-input-unit-dose-vmp-uom__assistiveHint"
-                                                            style="display: none;">When autocomplete results are
-                                                            available use up and down arrows to review and enter to
-                                                            select. Touch device users, explore by touch or with swipe
-                                                            gestures.</span>
-                                                    </div>
-                                                </div><select class="nhsuk-select display-no-select"
+                                                <select class="nhsuk-select display-no-select"
                                                     id="unit-dose-0-input-unit-dose-vmp-uom-select"
                                                     autofocus="autofocus" name="values[0].vmpUomCode">
                                                     <option value="">Select an option</option>
@@ -1573,7 +1512,7 @@
 
 
                                         </div>
-<br>
+                                        <br>
                                         <button class="nhsuk-button nhsuk-button--reverse" type="button"
                                             onclick="setLastDayOfPreviousMonth(this)">
                                             End Attribute
@@ -1591,7 +1530,8 @@
 
 
 
-            <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit" type="submit">Continue
+            <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit" type="submit">Preview
+                changes
             </button>
 
         </form>
