--- a/templates/update-redesign/vtm-update-associated-vmp.html
+++ b/templates/update-redesign/vtm-update-associated-vmp.html
@@ -9,6 +9,14 @@
                 value="cwj07OkIkB7yZTlY9u_ZIe8SGuQUE2e1YHnZwCgTI_UNKAFZSmuW2tttpSbfVgthxsLtRNt3N9xwJ1eYUBjrpR4rFZM1GmI6"
                 type="hidden">
             <div class="nhsuk-grid-row">
+                <div class="nhsuk-grid-column-one-third" style="float: right;">
+
+                    <button class="nhsuk-button nhsuk-button--secondary ">
+                        Cancel update
+                    </button>
+
+                </div>
+
                 <div class="nhsuk-grid-column-two-thirds">
 
                     <span class="nhsuk-caption-l" id="update-associated-vmps-sub-heading">Update associated VMPs</span>
@@ -17,12 +25,13 @@
 
                 </div>
                 <div class="nhsuk-grid-column-one-third">
-                    <button class="nhsuk-button nhsuk-button--secondary" id="add-vmp" name="_eventId_addVmp">
+
+                    <button class="nhsuk-button nhsuk-button--secondary nhs" id="add-vmp" name="_eventId_addVmp">
                         Add new associated VMP
                     </button>
-                    <button class="nhsuk-button nhsuk-button--primary" id="submit-top" name="_eventId_submit"
-                        type="submit">Continue
-                    </button>
+                    <!--button class="nhsuk-button nhsuk-button--primary" id="submit-top" name="_eventId_submit"
+                        type="submit">Preview changes
+                    </button-->
                 </div>
             </div>
 
@@ -47,11 +56,17 @@
 
                         <div class="nhsuk-grid-column-full update-box">
                             <section id="vmp-0">
+                                <div class="update-general-heading">
+                                    <h2 class="nhsuk-heading-l nhsuk-u-margin-bottom-1">Abacavir 20mg/ml oral
+                                        solution sugar free</h2>
+                                    <a href="#" class="nhsuk-link nhsuk-link--reverse nhsuk-button-float-right">Revert
+                                        changes</a>
+
+
+                                </div>
 
                                 <fieldset class="nhsuk-fieldset">
-                                    <legend id="vmp-0-legend-value"
-                                        class="nhsuk-fieldset__legend--l update-general-heading">Abacavir 20mg/ml oral
-                                        solution sugar free</legend>
+
                                     <input class="nhsuk-input" type="hidden" id="values0.id" name="values[0].id"
                                         value="5083">
 
@@ -317,11 +332,15 @@
 
                         <div class="nhsuk-grid-column-full update-box">
                             <section id="vmp-1">
+                                <div class="update-general-heading">
+                                    <h2 class="nhsuk-heading-l nhsuk-u-margin-bottom-1">Abacavir 300mg tablets</h2>
+                                    <a href="#" class="nhsuk-link nhsuk-link--reverse nhsuk-button-float-right">Revert
+                                        changes</a>
 
+
+                                </div>
                                 <fieldset class="nhsuk-fieldset">
-                                    <legend id="vmp-1-legend-value"
-                                        class="nhsuk-fieldset__legend--l update-general-heading">Abacavir 300mg tablets
-                                    </legend>
+
                                     <input class="nhsuk-input" type="hidden" id="values1.id" name="values[1].id"
                                         value="5082">
 
@@ -586,7 +605,7 @@
                         </div>
 
                         <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit"
-                            type="submit">Continue
+                            type="submit">Preview changes
                         </button>
                     </div>
                 </div>
