--- a/templates/update-redesign/index.html
+++ b/templates/update-redesign/index.html
@@ -6,15 +6,15 @@
 
     <ul>
 
-      <li><a href="/tce-2465/update-attribute" class="nhsuk-link nhsuk-link--no-visited-state">Update Attributes</a></li>
-      <li><a href="/tce-2465/update-current-name" class="nhsuk-link nhsuk-link--no-visited-state">Update current name</a></li>
-      <li><a href="/tce-2465/update-unit-dose-detail" class="nhsuk-link nhsuk-link--no-visited-state">Update Unit Dose Detail</a></li>
-      <li><a href="/tce-2465/update-associated-vtms" class="nhsuk-link nhsuk-link--no-visited-state">Update Associated VTMs</a></li>
-      <li><a href="/tce-2465/update-associated-vmp.html" class="nhsuk-link nhsuk-link--no-visited-state">Update Associated VMPs</a></li>
-      <li><a href="/tce-2465/update-code" class="nhsuk-link nhsuk-link--no-visited-state">Update codes</a></li>
-      <li><a href="/tce-2465/update-snomed-code" class="nhsuk-link nhsuk-link--no-visited-state">Update SNOMED code</a></li>
-      <li><a href="/tce-2465/update-ingredients" class="nhsuk-link nhsuk-link--no-visited-state">Update ingredients</a></li>
-      <li><a href="/tce-2465/update-supplier.html" class="nhsuk-link nhsuk-link--no-visited-state">Update supplier</a></li>
+      <li><a href="/update-redesign/update-attribute" class="nhsuk-link nhsuk-link--no-visited-state">Update Attributes</a></li>
+      <li><a href="/update-redesign/update-current-name" class="nhsuk-link nhsuk-link--no-visited-state">Update current name</a></li>
+      <li><a href="/update-redesign/update-unit-dose-detail" class="nhsuk-link nhsuk-link--no-visited-state">Update Unit Dose Detail</a></li>
+      <li><a href="/update-redesign/update-associated-vtms" class="nhsuk-link nhsuk-link--no-visited-state">Update Associated VTMs</a></li>
+      <li><a href="/update-redesign/update-associated-vmp.html" class="nhsuk-link nhsuk-link--no-visited-state">Update Associated VMPs</a></li>
+      <li><a href="/update-redesign/update-code" class="nhsuk-link nhsuk-link--no-visited-state">Update codes</a></li>
+      <li><a href="/update-redesign/update-snomed-code" class="nhsuk-link nhsuk-link--no-visited-state">Update SNOMED code</a></li>
+      <li><a href="/update-redesign/update-ingredients" class="nhsuk-link nhsuk-link--no-visited-state">Update ingredients</a></li>
+      <li><a href="/update-redesign/update-supplier.html" class="nhsuk-link nhsuk-link--no-visited-state">Update supplier</a></li>
     </ul>
   </div>
 </div>
