--- a/templates/update-redesign/ing-update-current-name.html
+++ b/templates/update-redesign/ing-update-current-name.html
@@ -31,10 +31,15 @@
 
                     <!--Current Value-->
                     <div class="nhsuk-grid-column-full update-box">
+                         <div class="update-general-heading">
+                                <h2 class="nhsuk-heading-l nhsuk-u-margin-bottom-1">Name details</h2>
+                                <a href="#" class="nhsuk-link nhsuk-link--reverse nhsuk-button-float-right">Revert
+                                    changes</a>
+
+
+                            </div>
                         <fieldset class="nhsuk-fieldset fieldset-wrap" id="name-0">
-                            <legend class="nhsuk-fieldset__legend--l update-general-heading" id="name-0-legend-value">
-                                Name details
-                            </legend>
+                        
                             <div class="nhsuk-grid-column-full">
                                 <div class="nhsuk-u-margin-right-2">
 
@@ -188,7 +193,7 @@
             </div>
 
 
-            <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit" type="submit">Continue
+            <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit" type="submit">Preview changes
             </button>
 
         </form>
