--- a/templates/update-redesign/sup-update-current-name.html
+++ b/templates/update-redesign/sup-update-current-name.html
@@ -4,11 +4,18 @@
     <div id="content-pane" class="nhsuk-grid-column-full">
 
 
+        <div class="nhsuk-grid-column-three-quarters">
+            <span class="nhsuk-caption-l" id="update-name-sub-heading">Update current name</span>
+            <span class="nhsuk-u-visually-hidden"> - </span>
+            <h1 class="nhsuk-heading-xl" id="update-name-heading">A A H Pharmaceuticals Ltd</h1>
+        </div>
 
-        <span class="nhsuk-caption-l" id="update-name-sub-heading">Update current name</span>
-        <span class="nhsuk-u-visually-hidden"> - </span>
-        <h1 class="nhsuk-heading-xl" id="update-name-heading">A A H Pharmaceuticals Ltd</h1>
-
+        <div class="nhsuk-grid-column-one-quarter" style="float: right;">
+            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+        </div>
 
         <form method="post">
             <input name="_csrf"
@@ -23,10 +30,15 @@
 
                     <!--Current Value-->
                     <div class="nhsuk-grid-column-full update-box">
+                         <div class="update-general-heading">
+                                <h2 class="nhsuk-heading-l nhsuk-u-margin-bottom-1">Name details</h2>
+                                <a href="#" class="nhsuk-link nhsuk-link--reverse nhsuk-button-float-right">Revert
+                                    changes</a>
+
+
+                            </div>
                         <fieldset class="nhsuk-fieldset fieldset-wrap" id="name-0">
-                            <legend class="nhsuk-fieldset__legend--l update-general-heading" id="name-0-legend-value">
-                                Name details
-                            </legend>
+                           
                             <div class="nhsuk-grid-column-full">
                                 <div class="nhsuk-u-margin-right-2">
 
@@ -169,9 +181,9 @@
                                 </div>
 
                                 <button class="nhsuk-button nhsuk-button--reverse" type="button"
-                                onclick="setLastDayOfPreviousMonth(this)">
-                                End Attribute
-                            </button>
+                                    onclick="setLastDayOfPreviousMonth(this)">
+                                    End Attribute
+                                </button>
                             </div>
                         </fieldset>
                     </div>
@@ -179,7 +191,8 @@
             </div>
 
 
-            <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit" type="submit">Continue
+            <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit" type="submit">Preview
+                changes
             </button>
 
         </form>
