--- a/templates/update-redesign/test.html
+++ b/templates/update-redesign/test.html
@@ -2336,7 +2336,7 @@
 
                     <button formaction="/update/amp?execution=e4s1"
                         class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-top-4" role="button" id="submit"
-                        name="_eventId_submit" type="submit">Continue
+                        name="_eventId_submit" type="submit">Preview changes
                     </button>
                 </form>
             </div>
