--- a/templates/update-redesign/uom-update-snomed-code.html
+++ b/templates/update-redesign/uom-update-snomed-code.html
@@ -9,19 +9,32 @@
                 type="hidden">
 
 
-            <span class="nhsuk-caption-l" id="update-uom-snomed-code-heading-sub-heading">Update SNOMED code</span>
-            <span class="nhsuk-u-visually-hidden"> - </span>
-            <h1 class="nhsuk-heading-xl" id="update-uom-snomed-code-heading-heading">ampoule</h1>
+            <div class="nhsuk-grid-column-three-quarters"> <span class="nhsuk-caption-l"
+                    id="update-uom-snomed-code-heading-sub-heading">Update SNOMED code</span>
+                <span class="nhsuk-u-visually-hidden"> - </span>
+                <h1 class="nhsuk-heading-xl" id="update-uom-snomed-code-heading-heading">ampoule</h1>
+            </div>
 
-
+            <div class="nhsuk-grid-column-one-quarter" style="float: right;">
+                <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
+                    data-module="nhsuk-button" type="submit">
+                    Cancel update
+                </button>
+            </div>
 
 
             <div class="nhsuk-grid-row">
                 <div class="nhsuk-grid-column-full">
                     <div class="nhsuk-grid-column-full update-box">
+                          <div class="update-general-heading">
+                                <h2 class="nhsuk-heading-l nhsuk-u-margin-bottom-1">SNOMED code</h2>
+                                <a href="#" class="nhsuk-link nhsuk-link--reverse nhsuk-button-float-right">Revert
+                                    changes</a>
+
+
+                            </div>
                         <fieldset class="nhsuk-fieldset" aria-describedby="update-snomed-code-hint" role="group">
-                            <legend id="code-legend-value" class="nhsuk-fieldset__legend--l update-general-heading">
-                                SNOMED code</legend>
+                       
 
                             <div class="nhsuk-grid-column-full">
                                 <div class="nhsuk-hint" id="update-snomed-code-hint">
@@ -199,15 +212,15 @@
                                 </div>
 
                                 <button class="nhsuk-button nhsuk-button--reverse" type="button"
-                                onclick="setLastDayOfPreviousMonth(this)">
-                                End Attribute
-                            </button>
+                                    onclick="setLastDayOfPreviousMonth(this)">
+                                    End Attribute
+                                </button>
                             </div>
 
                         </fieldset>
                     </div>
                     <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit"
-                        type="submit">Continue
+                        type="submit">Preview changes
                     </button>
                 </div>
             </div>
