Resolved merge conflicts

--- a/templates/user-designed-query/saved-query-summary-page.html
+++ b/templates/user-designed-query/saved-query-summary-page.html
@@ -6,7 +6,7 @@
          aria-hidden="true" height="24" width="24">
       <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
     </svg>
-    <span id="back-link-text">Go back to choose dictionary </span></a>
+    <span id="back-link-text">Go back to choose View saved queries  </span></a>
 </div>
 <div>
   <fieldset class="nhsuk-fieldset">
@@ -16,7 +16,7 @@
                 UDQ saved query
               <span class="nhsuk-u-visually-hidden"> - </span>
             </span>
-        Saved query summary page for Cat A price checker
+        Large query for looking at VMPP Cat A prices
       </h1>
     </legend>
 
@@ -271,6 +271,12 @@
       </dl>
     </div>
   </fieldset>
+
+  <div class="nhsuk-inset-text">
+    <span class="nhsuk-u-visually-hidden">Create a clone of this summary</span>
+
+    <p>Create a new version and tailor this query to your needs. You can duplicate this query and adjust it to match your requirements.<a href="saved-query-summary-clone.html"> Create clone</a>.</p>
+  </div>
 
   <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="load-page.html" id="save-continue">
     Start search
